[package]
name = "sidereal-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.4"
ash = { version = "0.37.3+1.3.251", optional = true }

[features]
default = [ "vulkan" ]
vulkan = [ "ash" ]
