[package]
name = "sidereal-window"
version = "0.1.0"
edition = "2021"

[dependencies]
sidereal-render = { path = "../sidereal-render" }
ash = "0.37.3+1.3.251"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]
